--- a/playground/index-template.html
+++ b/playground/index-template.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Playground</title>
+    <meta name="viewport" content="initial-scale=1, user-scalable=no" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Playground</title>
-</head>
-
-<body>
-  <div id="app"></div>
-</body>
-
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
